# sppcax

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/theory/: dynamic_factor_analysis.rst  factor_analysis.rst  index.rst  inference_methods.rst  model_reduction.rst  parameter_expansion.rst
docs/theory/examples/: index.rst
examples/: benchmark_dfa_algos.ipynb  debug_factor_analysis.ipynb  dfa_predictive_comparison.ipynb  mixed_likelihood_example.py  ppca_example.py  sppcax_susie_comparison.ipynb  susie_pca_comparison.ipynb  test_dfa.ipynb  test_dynamics_mf_vs_mvnig.ipynb  test_masking.ipynb  test_mf_vs_mvnig.ipynb  test_px_em_dfa.ipynb  test_px_em_fa.ipynb  test_pxl_em_dfa.ipynb  test_pxl_em_fa.ipynb
src/sppcax/: __init__.py  skeleton.py  types.py
src/sppcax/bmr/: __init__.py  delta_f.py  model_reduction.py
src/sppcax/distributions/: __init__.py  base.py  bernoulli.py  beta.py  categorical.py  delta.py  exponential_family.py  factor_analysis.py  gamma.py  inverse_wishart.py  mean_field.py  mvn.py  mvn_gamma.py  normal.py  poisson.py  updates.py  utils.py
src/sppcax/inference/: filtering.py  smoothing.py  utils.py
src/sppcax/metrics/: __init__.py  kl_divergence.py
src/sppcax/models/: __init__.py  base.py  dfa.py  dynamic_factor_analysis.py  dynamic_factor_analysis_params.py  factor_analysis.py  factor_analysis_algorithms.py  factor_analysis_params.py  likelihood_utils.py  mixed_likelihood_vbpca.py  mixed_likelihood_vbpca.py.bak  old_funcitons.py  regression_params.py  utils.py
src/sppcax/parameter_expansion/: __init__.py  rotation.py
tests/: conftest.py  test_beta.py  test_correctness.py  test_delta.py  test_distributional_observations.py  test_dynamic_factor_analysis.py  test_exponential_family.py  test_factor_analysis.py  test_masking.py  test_mixed_likelihood_vbpca.py.bak  test_model_combinations.py  test_skeleton.py  test_unification.py
